Increase code readability and automatically handle authentication method based on config