@@ -13,7 +13,6 @@ import com.bynder.sdk.model.Derivative;
 import com.bynder.sdk.model.Media;
 import com.bynder.sdk.model.MediaType;
 import com.bynder.sdk.model.oauth.RefreshTokenCallback;
-import com.bynder.sdk.model.oauth.Token;
 import com.bynder.sdk.query.MediaQuery;
 import com.bynder.sdk.query.OrderBy;
 import com.bynder.sdk.service.BynderClient;
@@ -25,6 +24,7 @@ import org.slf4j.LoggerFactory;
 
 import java.awt.*;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -38,54 +38,96 @@ import java.util.Scanner;
  */
 public class AppSample {
 
-    private static final Logger LOG = LoggerFactory.getLogger(AppSample.class);
+    private static final List<String> OAUTH_SCOPES = Arrays.asList("offline", "asset:read", "asset:write");
 
-    public static void main(final String[] args) throws URISyntaxException, IOException {
-        /**
-         * Loads app.properties file under src/main/resources
-         */
-        Properties appProperties = Utils.loadConfig("app");
+    private final Logger logger;
+    private final Properties config;
 
-        // Initialize BynderClient with a permanent token
-        BynderClient client = BynderClient.Builder.create(
-            new Configuration.Builder(new URL(appProperties.getProperty("BASE_URL")))
-                .setPermanentToken(appProperties.getProperty("PERMANENT_TOKEN")).build());
+    public static void main(final String[] args)
+            throws IOException, URISyntaxException {
+        new AppSample().queryBynder();
+    }
 
+    private AppSample()
+            throws IOException, URISyntaxException {
+        logger = LoggerFactory.getLogger(AppSample.class);
+        config = Utils.loadConfig("app");
+    }
+
+    private void queryBynder()
+            throws IOException, URISyntaxException {
+        BynderClient client = authenticate();
         AssetService assetService = client.getAssetService();
 
-        // Call the API to request for media assets
-        List<Media> mediaList = assetService.getMediaList(
-            new MediaQuery().setType(MediaType.IMAGE).setOrderBy(OrderBy.NAME_DESC).setLimit(10)
-                .setPage(1)).blockingSingle().body();
-        for (Media media : mediaList) {
-            LOG.info(media.getName());
+        // Call the API to request for the account information
+        for (Derivative derivative : client.getDerivatives().blockingSingle().body()) {
+            logger.info(derivative.getPrefix());
         }
 
+        // Call the API to request for brands
+        for (Brand brand : assetService.getBrands().blockingSingle().body()) {
+            logger.info(brand.getName());
+        }
+
+        // Call the API to request for media assets
+        for (Media media : assetService.getMediaList(
+                new MediaQuery()
+                        .setType(MediaType.IMAGE)
+                        .setOrderBy(OrderBy.NAME_DESC)
+                        .setLimit(10)
+                        .setPage(1)
+        ).blockingSingle().body()) {
+            logger.info(media.getName());
+        }
+    }
+
+    private BynderClient authenticate()
+            throws IOException, URISyntaxException {
+        if (config.containsKey("PERMANENT_TOKEN")) {
+            return authenticateWithPermanentToken();
+        } else {
+            return authenticateWithOAuth2();
+        }
+    }
+
+    private BynderClient authenticateWithPermanentToken()
+            throws MalformedURLException {
+        // Initialize BynderClient with a permanent token
+        return BynderClient.Builder.create(
+                new Configuration.Builder(new URL(config.getProperty("BASE_URL")))
+                        .setPermanentToken(config.getProperty("PERMANENT_TOKEN"))
+                        .build()
+        );
+    }
+
+    private BynderClient authenticateWithOAuth2()
+            throws IOException, URISyntaxException {
         // Optional: define callback function to be triggered after access token is auto
         // refreshed
-        RefreshTokenCallback callback = new RefreshTokenCallback() {
-            @Override
-            public void execute(Token token) {
-                LOG.info("Auto refresh triggered!");
-                LOG.info(String.format("Refresh token used: %s", token.getRefreshToken()));
-                LOG.info(String.format("New access token: %s", token.getAccessToken()));
-                LOG.info(String.format("New access token expiration date: %s", token.getAccessTokenExpiration()));
-            }
+        RefreshTokenCallback callback = token -> {
+            logger.info("Auto refresh triggered!");
+            logger.info(String.format("Refresh token used: %s", token.getRefreshToken()));
+            logger.info(String.format("New access token: %s", token.getAccessToken()));
+            logger.info(String.format("New access token expiration date: %s", token.getAccessTokenExpiration()));
         };
 
         // Initialize BynderClient with oauth settings to perform OAuth 2.0
         // authorization flow
-        client = BynderClient.Builder.create(
-            new Configuration.Builder(new URL(appProperties.getProperty("BASE_URL")))
-                .setOAuthSettings(new OAuthSettings(appProperties.getProperty("CLIENT_ID"),
-                appProperties.getProperty("CLIENT_SECRET"), new URI(appProperties.getProperty("REDIRECT_URI")),
-                callback)).build());
+        BynderClient client = BynderClient.Builder.create(
+                new Configuration.Builder(new URL(config.getProperty("BASE_URL")))
+                        .setOAuthSettings(new OAuthSettings(
+                                config.getProperty("CLIENT_ID"),
+                                config.getProperty("CLIENT_SECRET"),
+                                new URI(config.getProperty("REDIRECT_URI")),
+                                callback
+                        ))
+                        .build()
+        );
 
         // Initialize OAuthService
         OAuthService oauthService = client.getOAuthService();
 
-        List<String> scopes = Arrays.asList("offline", "asset:read");
-        URL authorizationUrl = oauthService.getAuthorizationUrl("state example", scopes);
+        URL authorizationUrl = oauthService.getAuthorizationUrl("state example", OAUTH_SCOPES);
 
         // Open browser with authorization URL
         Desktop desktop = Desktop.getDesktop();
@@ -98,29 +140,9 @@ public class AppSample {
         scanner.close();
 
         // Get the access token
-        oauthService.getAccessToken(code, scopes).blockingSingle();
+        oauthService.getAccessToken(code, OAUTH_SCOPES).blockingSingle();
 
-        // Call the API to request for the account information
-        List<Derivative> derivatives = client.getDerivatives().blockingSingle().body();
-        for (Derivative derivative : derivatives) {
-            LOG.info(derivative.getPrefix());
-        }
-
-        // Get the asset service
-        assetService = client.getAssetService();
-
-        // Call the API to request for brands
-        List<Brand> brands = assetService.getBrands().blockingSingle().body();
-        for (Brand brand : brands) {
-            LOG.info(brand.getName());
-        }
-
-        // Call the API to request for media assets
-        mediaList = assetService.getMediaList(
-            new MediaQuery().setType(MediaType.IMAGE).setOrderBy(OrderBy.NAME_DESC).setLimit(10)
-                .setPage(1)).blockingSingle().body();
-        for (Media media : mediaList) {
-            LOG.info(media.getName());
-        }
+        return client;
     }
+
 }
